--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Kyle Smith's Portfolio</h1>
       <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>I am a rising sophomore at MIT who is studying Mathematics & Computer Science.</p>
+      <p>I am an intern at Google</p>
+      <img src="/images/mit.jpg" width="300" height="177" alt="This is my university">
+      <p>Click here to get a random fact about me:</p>
+      <button onclick="addRandomFact()">Fact!</button>
+      <div id="fact-container"></div>
     </div>
   </body>
 </html>
