PR for up to Step 4 wanted to send in a starter to the process

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <!-- Week 1 -->
     <h1>Kyle Smith's Portfolio</h1>
 
     <p><a href="https://github.com/kyleasmith1">GitHub</a>&nbsp;&nbsp;
@@ -21,6 +22,12 @@
         </a>
     </div>
 
+    <h3>Click Here To Get A Random Inspirational Quote:</h3>
+
+    <button id="random-quote-button" onclick="addRandomQuote()">Random Quote</button>
+    
+    <div id="quote-container"></div>
+
     <h3>Some Projects I've Worked On:</h3>
 
     <p>LISP Interpreter-carlae (Python)</p>
@@ -30,10 +37,12 @@
     <p>Johnson's Algorithm (Python)</p>
     <p>N-Dimensional Minesweeper (Python)</p>
 
-    <h3>Click Here To Get A Random Inspirational Quote:</h3>
+    <!-- Week 2 -->
+    <h3>JSON Test:</h3>
 
-    <button id="random-quote-button" onclick="addRandomQuote()">Random Quote</button>
+    <button id="comments" onclick="getServerMessageUsingArrowFunctions()">Click</button>
     
-    <div id="quote-container"></div>
+    <div id="message-container"></div>
+
   </body>
 </html>
