Minor changes to close out step repo

--- a/portfolio/src/main/webapp/images.html
+++ b/portfolio/src/main/webapp/images.html
@@ -2,7 +2,7 @@
 <html>
  <head>
      <meta charset="UTF-8">
-     <title>Gallery</title>
+     <title>Image Gallery</title>
      <link rel="stylesheet" href="style.css">
      <script src="script.js"></script>
  </head>
